to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

7/27/2001: mkoeppe
	   * stype.c (SwigType_default): Strip qualifiers first. The
	     default type of "int * const" is now "SWIGPOINTER *".
	   * main.cxx: Define "__cplusplus" in SWIG's preprocessor if
	     in C++ mode.
	   * [Guile]: Added some support for arrays and C++
	     references, fixing the "constant_pointers" test case.

7/26/2001: cheetah (william fulton)
	   * Test-suite added.
	   * Initial testcases: constant_pointers cpp_enum defines
	     sizeof_pointers unions virtual_destructor
	   * Make clean improvements.

7/24/2001: cheetah (william fulton)
	   * [Java] Underscores in the package name and/or module name
	   no longer give linking problems.

7/17/2001: cheetah (william fulton)
	   * More parser bug fixes for constant pointers

7/19/2001: mkoeppe
	   * [Guile] Aesthetic improvement in variable wrappers.

7/18/2001: beazley
           * Fixed core-dump problem in pointer library when 
             freeing character arrays.
             SF Bug [ #415837 ] pointer lib core dump

7/18/2001: beazley
           * Fixed problem with default destructors and shadow
             classes.  SF bug #221128.

7/18/2001: beazley
           * To provide better line-number tracking in interfaces
             with lots of macros, special locator comments are
             now generated by the SWIG preprocessor.  For example:

                 /*@foo.i,42,BLAH@*/expanded macro/*@@*/

             The first /*@...@*/ sequence sets the context
             to point to the macro code.  The /*@@*/ comment
             terminates the context.  The SWIG parser should