@@ -540,7 +540,6 @@ be specified, because the default 'argout' code depends on the default
 <h2>
 Bugs</h2>
 <ul>
-<li>Wrapping of static c++ member variables does not work.</li>
 <li>Global arrays do not work.</li>
 </ul>
 
