@@ -14,6 +14,12 @@ http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).
 Eventually this branch will be merged with the development on the
 trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.
 
+7/26/2001: cheetah (william fulton)
+	   * Fixes for Sourceforge bug #444748 - new testcase cpp_static:
+	     [TCL] Class with just static member variable/function fix
+	     [Java] Fixed static variables support
+	     [Ruby] Static variables workaround removed
+
 7/27/2001: mkoeppe
 	   * stype.c (SwigType_default): Strip qualifiers first. The
 	     default type of "int * const" is now "SWIGPOINTER *".
